--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                 Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
             </p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails">GitHub</a>
+                <h2 class="apresentacao__links__titulo">Acesse minhas redes:</h2>
+                <a class="apresentacao__links__link" href="#" target="_blank">Instagram</a>
+                <a class="apresentacao__links__link" href="#" target="_blank">GitHub</a>
             </div>
         </section>
         <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
