Adição da Twitch, organização dos links

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <h2 class="apresentacao__links__titulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__link" href="#" target="_blank">Instagram</a>
                 <a class="apresentacao__links__link" href="#" target="_blank">GitHub</a>
+                <a class="apresentacao__links__link" href="#" target="_blank">Twitch</a>
             </div>
         </section>
         <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
