--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </section>
         <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
     </main>
-    <footer></footer>
+    <footer class="rodapé">
+        <p>Desenvolvido por Alura</p>
+    </footer>
 </body>
 
 </html>
