--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__titulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="#" target="_blank">Instagram</a>
-                <a class="apresentacao__links__link" href="#" target="_blank">GitHub</a>
-                <a class="apresentacao__links__link" href="#" target="_blank">Twitch</a>
+                <a class="apresentacao__links__link2" href="#" target="_blank"> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Ícone Github" class="icone1">GitHub</a>
+                <a class="apresentacao__links__link1" href="#" target="_blank"> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" alt="Ícone LinkedIn" class="icone2">LinkedIn</a>
+                <a class="apresentacao__links__link3" href="#" target="_blank">Twitch</a>
             </div>
         </section>
         <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
     </main>
-    <footer class="rodapé">
+    <footer class="rodape">
         <p>Desenvolvido por Alura</p>
     </footer>
 </body>
