--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <ul class="menu">
+                <li><a href="#" target="_blank">Home</a></li>
+                <li><a href="#" target="_blank">Sobre mim</a></li>
+            </ul>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">
