Criação de página "Sobre mim", correção ortográfica no index.html. Diminuição da fonte e imagem do sobre mim

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="#" target="_blank">Home</a></li>
-                <li><a href="#" target="_blank">Sobre mim</a></li>
+                <li><a href="./about-me/index.html" target="_blank">Sobre mim</a></li>
             </ul>
         </nav>
     </header>
