--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__titulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="#" target="_blank"> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Ícone Github" class="icone1">GitHub</a>
-                <a class="apresentacao__links__link" href="#" target="_blank"> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" alt="Ícone LinkedIn" class="icone2">LinkedIn</a>
-                <a class="apresentacao__links__link" href="#" target="_blank">Twitch</a>
+                <a class="apresentacao__links__link" href="#" target="_blank"> <img src="./assets/github.png" alt="Ícone Github" class="icone1">GitHub</a>
+                <a class="apresentacao__links__link" href="#" target="_blank"> <img src="./assets/linkedin.png" alt="Ícone LinkedIn" class="icone2">LinkedIn</a>
+                <a class="apresentacao__links__link" href="#" target="_blank"><img src="./assets/twitch.png" alt="Ícone Twitch" class="icone3">Twitch</a>
             </div>
         </section>
         <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
