--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img class="imagem-principal" src="./assets/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Alura</p>
+        <p>Desenvolvido por Tori.</p>
     </footer>
 </body>
 
